<resources>
    <string name="app_name">Hydratic</string>
    <string name="app_name_uppercase">HYDRATIC</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="sign_in_details_part_1">To use the app, you must first sign in.</string>
    <string name="sign_in_details_part_2">If you don\'t have an account already, it will prompt you to sign up.</string>
    <string name="sign_out">Sign Out</string>
    <string name="history">History</string>
    <string name="hydration">Hydration</string>
    <string name="settings">Settings</string>
    <string name="tips">Tips</string>
    <string name="weight_lb">Weight (lb)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="gender_hint">Gender…</string>
    <string name="activity_level_hint">Activity level…</string>
    <string name="next">Next</string>
    <string name="setup">Setup</string>
    <string name="imperial_lb">Imperial (lb)</string>
    <string name="metric_kg">Metric (kg)</string>
    <string name="imperial_fl_oz">Imperial (fl oz)</string>
    <string name="metric_ml">Metric (ml)</string>
    <string name="your_daily_goal">Your daily goal: %.1f %s</string>
    <string name="daily_hydration_levels">Daily hydration levels</string>
    <string name="profile">Profile</string>
    <string name="daily_goal">Daily goal</string>
    <string name="notifications">Notifications</string>
    <string name="state">State</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="repeat_every">Repeat every</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="every_x_hours">Every %d hours</string>
    <string name="zero_percent">0%</string>
    <string name="one_hundred_percent">100%</string>
    <string name="water">Water</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="sixteen_fl_oz_glass">16 fl oz\nglass</string>
    <string name="sixteen_fl_oz_glass_ml">473 ml\nglass</string>
    <string name="eight_fl_oz_glass">8 fl oz\nglass</string>
    <string name="eight_fl_oz_glass_ml">236 ml\nglass</string>
    <string name="eight_fl_oz_cup">8 fl oz\ncup</string>
    <string name="eight_fl_oz_cup_ml">236 ml\ncup</string>
    <string name="no_history_yet">No history yet.\nStart hydrating!</string>
    <string name="tip_title">Tip #%d</string>
    <string name="widget_error">Network error.\nRemove the widget and try again.</string>
    <string name="notification_frequency">Notification frequency</string>
    <string name="notification_repeat_error">Repeat frequency should be specified in hours</string>
    <string name="get_hydrated">Get hydrated!</string>
    <string name="do_not_forget_to_hydrate">Don\'t forget to hydrate!. Open the app and log your progress.</string>
    <string name="info">Info</string>
    <string name="server_error_message">Server connection issue. Please try again.</string>
    <string name="auth_error_message">Authentication issue. Please try again.</string>

    <string-array name="genders">
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name="activity_levels">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="tips_array">
        <item>By the time you feel thirsty, your body has lost more than 1 percent of its total water.</item>
        <item>Drinking water can help you lose weight by increasing your metabolism.</item>
        <item>When dehydrated, the skin can become more vulnerable to skin disorders and wrinkling.</item>
        <item>Water boosts performance during exercise.</item>
        <item>Water is the main food the body needs.</item>
        <item>A 2% reduction of water levels in the body can lead to a 20% decrease in mental and physical performance.</item>
        <item>Dehydration may induce contractions in pregnant women.</item>
    </string-array>

    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="time_of_day">
        <item>AM</item>
        <item>PM</item>
    </string-array>

</resources>
