<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/profile"/>

        <RelativeLayout
            android:id="@+id/sign_out_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="12dp"
            android:background="@drawable/settings_item_selector">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/sign_out_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/sign_out"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/daily_goal_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="12dp"
            android:background="@drawable/settings_item_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:text="@string/daily_goal"/>

            <TextView
                android:id="@+id/daily_goal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <RadioGroup
            android:id="@+id/measuring_units_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="6dp"
            android:checkedButton="@id/imperial">

            <RadioButton
                android:id="@+id/imperial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imperial_fl_oz"/>

            <RadioButton
                android:id="@+id/metric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_ml"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/notifications"/>

        <RelativeLayout
            android:id="@+id/notification_state_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:padding="12dp"
            android:background="@drawable/settings_item_selector">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:text="@string/state"/>

            <TextView
                android:id="@+id/notification_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/on"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/notifications_on_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/notification_start_time_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:padding="12dp"
                android:background="@drawable/settings_item_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/start_time"/>

                <TextView
                    android:id="@+id/notification_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notification_end_time_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:padding="12dp"
                android:background="@drawable/settings_item_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/end_time"/>

                <TextView
                    android:id="@+id/notification_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/notification_repeat_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:padding="12dp"
                android:background="@drawable/settings_item_selector">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/repeat_every"/>

                <TextView
                    android:id="@+id/notification_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
