<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/water"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/log_large_water_glass_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:tint="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_water_glass"/>

            <TextView
                android:id="@+id/large_water_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/sixteen_fl_oz_glass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/water"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/log_small_water_glass_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:tint="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_water_glass"/>

            <TextView
                android:id="@+id/small_water_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/eight_fl_oz_glass"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/coffee"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/log_coffee_cup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:tint="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_coffee_togo_cup"/>

            <TextView
                android:id="@+id/coffee_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/eight_fl_oz_cup"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/tea"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/log_tea_cup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:tint="@color/white"
                android:backgroundTint="@color/colorPrimary"
                android:src="@drawable/ic_tea_cup"/>

            <TextView
                android:id="@+id/tea_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/eight_fl_oz_cup"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>