<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/daily_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/daily_goal_view_padding_tart"
                android:paddingEnd="@dimen/daily_goal_view_padding_end"
                android:paddingTop="@dimen/daily_goal_view_padding_top"
                android:paddingBottom="@dimen/daily_goal_view_padding_bottom"
                android:textSize="@dimen/daily_goal_view_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/your_daily_goal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/completion_indicator"
                android:layout_marginStart="6dp"
                android:textSize="@dimen/hundred_percent_text_size"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/one_hundred_percent"/>

            <View
                android:id="@+id/completion_indicator"
                android:layout_width="@dimen/completion_indicator_width"
                android:layout_height="@dimen/completion_indicator_height"
                android:layout_below="@id/daily_goal"
                android:background="@color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/progress_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/progress_indicator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:animateLayoutChanges="true"/>

            <View
                android:id="@+id/halfway_indicator"
                android:layout_width="@dimen/halfway_indicator_width"
                android:layout_height="@dimen/halfway_indicator_height"
                android:layout_centerVertical="true"
                android:background="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/hydration_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/hydration_level_text_size"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:text="@string/zero_percent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/HydrationLogFAB"
            android:id="@+id/log_drink_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/colorPrimary"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_add"/>

    </RelativeLayout>

</RelativeLayout>